--- a/src/components/header.twig
+++ b/src/components/header.twig
@@ -1,3 +1,4 @@
-<header>
+<header data-header data-header-text="added message via js">
     header
+    <span data-header-message></span>
 </header>
