--- a/src/pages/index.twig
+++ b/src/pages/index.twig
@@ -3,5 +3,10 @@
 {% block title %}index page{% endblock %}
 
 {% block content %}
-    index page
+    <div class="vs-container vs-py-6">
+        <div class="vs-row">
+            <div class="vs-col-12 vs-col-sm-3">index</div>
+            <div class="vs-col-12 vs-col-sm-9">page</div>
+        </div>
+    </div>
 {% endblock %}
