--- a/src/old/helpers/resets.scss
+++ b/src/old/helpers/resets.scss
@@ -7,7 +7,7 @@
 	box-sizing: border-box;
 }
 
-*:focus {
+*:focus-visible {
 	outline: none;
 }
 
@@ -68,5 +68,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
+	text-wrap: pretty;
+
 	-webkit-font-smoothing: antialiased;
 }
