load font mixin style fix

--- a/src/styles/mixins/load-font.scss
+++ b/src/styles/mixins/load-font.scss
@@ -1,4 +1,4 @@
-@mixin load-font($name, $weight, $style: 'normal') {
+@mixin load-font($name, $weight, $style: normal) {
 	@font-face {
 		font-family: $name;
 		font-weight: $weight;
